// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChatContainer component initializedState when burned renders properly 1`] = `
<div
  className="css-encnrh "
>
  <Connect(HeaderMenu) />
  <div
    className="css-tvbb1z"
    style={
      Object {
        "background": "#fff",
        "color": "red",
        "fontFamily": "Source Sans Pro",
        "fontWeight": 700,
        "textTransform": "uppercase",
      }
    }
  >
    We're having trouble connecting. Try refreshing the page.
  </div>
  <Debugger />
  <div
    className="css-1lhgrxf"
    style={
      Object {
        "backgroundColor": "#f4f4f8",
      }
    }
  >
    <Connect(Transcript) />
  </div>
</div>
`;

exports[`ChatContainer component initializedState when disconnected renders properly 1`] = `
<div
  className="css-encnrh "
>
  <Connect(HeaderMenu) />
  <div
    className="css-tvbb1z"
    style={
      Object {
        "background": "#fff",
        "color": "red",
        "fontFamily": "Source Sans Pro",
        "fontWeight": 700,
        "textTransform": "uppercase",
      }
    }
  >
    Reconnecting...
  </div>
  <Debugger />
  <div
    className="css-1lhgrxf"
    style={
      Object {
        "backgroundColor": "#f4f4f8",
      }
    }
  >
    <Connect(Transcript) />
  </div>
</div>
`;

exports[`ChatContainer component initializedState when errored renders properly 1`] = `
<div
  className="css-encnrh "
>
  <Connect(HeaderMenu) />
  <div
    className="css-tvbb1z"
    style={
      Object {
        "background": "#fff",
        "color": "red",
        "fontFamily": "Source Sans Pro",
        "fontWeight": 700,
        "textTransform": "uppercase",
      }
    }
  >
    We're having trouble connecting. Try refreshing the page.
  </div>
  <Debugger />
  <div
    className="css-1lhgrxf"
    style={
      Object {
        "backgroundColor": "#f4f4f8",
      }
    }
  >
    <Connect(Transcript) />
  </div>
</div>
`;

exports[`ChatContainer component initializedState when inactive renders properly 1`] = `
<div
  className="css-encnrh "
>
  <Connect(HeaderMenu) />
  <div
    className="css-tvbb1z"
    style={
      Object {
        "background": "#fff",
        "color": "red",
        "fontFamily": "Source Sans Pro",
        "fontWeight": 700,
        "textTransform": "uppercase",
      }
    }
  >
    You have been disconnected due to inactivity. Please refresh the page to reconnect.
  </div>
  <Debugger />
  <div
    className="css-1lhgrxf"
    style={
      Object {
        "backgroundColor": "#f4f4f8",
      }
    }
  >
    <Connect(Transcript) />
  </div>
</div>
`;

exports[`ChatContainer component initializedState when initialized renders properly 1`] = `
<div
  className="css-encnrh "
>
  <Connect(HeaderMenu) />
  <div
    className="css-16h2yiv"
    style={
      Object {
        "background": "#31bf8b",
        "backgroundColor": "#333",
        "fontFamily": "Source Sans Pro",
        "fontSize": 16,
        "fontWeight": 500,
        "textTransform": "uppercase",
      }
    }
  >
    We're here to help if you have any questions!
  </div>
  <Debugger />
  <div
    className="css-1lhgrxf"
    style={
      Object {
        "backgroundColor": "#f4f4f8",
      }
    }
  >
    <Dropzone
      accept="image/png,image/jpeg"
      className="css-7hus7w"
      disableClick={true}
      disablePreview={true}
      disabled={true}
      maxSize={50000000}
      minSize={0}
      multiple={true}
      onDrop={[Function]}
      preventDropOnDocument={true}
      style={
        Object {
          "minHeight": "0px",
        }
      }
    >
      <Connect(Transcript) />
      <Connect(MessageForm)
        openFileBrowser={[Function]}
      />
    </Dropzone>
  </div>
</div>
`;

exports[`ChatContainer component initializedState when loading renders properly 1`] = `
<div
  className="css-encnrh "
>
  <Connect(HeaderMenu) />
  <div
    className="css-16h2yiv"
    style={
      Object {
        "background": "#31bf8b",
        "backgroundColor": "#333",
        "fontFamily": "Source Sans Pro",
        "fontSize": 16,
        "fontWeight": 500,
        "textTransform": "uppercase",
      }
    }
  >
    We're here to help if you have any questions!
  </div>
  <Debugger />
  <div
    className="css-1lhgrxf"
    style={
      Object {
        "backgroundColor": "#f4f4f8",
      }
    }
  >
    <Spinner />
  </div>
</div>
`;

exports[`ChatContainer component initializedState when uninitialized renders properly 1`] = `
<div
  className="css-encnrh "
>
  <Connect(HeaderMenu) />
  <div
    className="css-16h2yiv"
    style={
      Object {
        "background": "#31bf8b",
        "backgroundColor": "#333",
        "fontFamily": "Source Sans Pro",
        "fontSize": 16,
        "fontWeight": 500,
        "textTransform": "uppercase",
      }
    }
  >
    We're here to help if you have any questions!
  </div>
  <Debugger />
  <div
    className="css-1lhgrxf"
    style={
      Object {
        "backgroundColor": "#f4f4f8",
      }
    }
  >
    <Spinner />
  </div>
</div>
`;

exports[`ChatContainer component welcome form when welcome form has not been submitted renders welcome form 1`] = `
<div
  className="css-encnrh "
>
  <Connect(WelcomeForm) />
</div>
`;

exports[`ChatContainer component when chatContainerHidden is true returns null 1`] = `""`;
